Project

General

Profile

Actions

Bug #53935

closed

[cli] fix mixing switches and positional arguments

Added by Ilya Dryomov over 2 years ago. Updated almost 2 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
octopus,pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Currently this

$ rbd --all children img

doesn't work, while this

$ rbd children --all img

or this

$ rbd children img --all

does. The issue is that -a/--all isn't on the list of known switch arguments. The "rbd children" example may seem contrived but for more complicated commands such as "rbd device map" mixing switches and positional arguments occurs naturally:

$ rbd device --device-type nbd --options try-netlink --show-cookie map img

This shows up as rbd-nbd.sh failures on cookie-enabled kernels:

http://qa-proxy.ceph.com/teuthology/dis-2022-01-19_08:39:11-rbd-wip-dis-testing-distro-default-smithi/6626548/teuthology.log


Related issues 2 (0 open2 closed)

Copied to rbd - Backport #53981: pacific: [cli] fix mixing switches and positional argumentsResolvedIlya DryomovActions
Copied to rbd - Backport #53982: octopus: [cli] fix mixing switches and positional argumentsResolvedIlya DryomovActions
Actions #1

Updated by Ilya Dryomov over 2 years ago

  • Pull request ID set to 44669
Actions #2

Updated by Ilya Dryomov over 2 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Backport Bot over 2 years ago

  • Copied to Backport #53981: pacific: [cli] fix mixing switches and positional arguments added
Actions #4

Updated by Backport Bot over 2 years ago

  • Copied to Backport #53982: octopus: [cli] fix mixing switches and positional arguments added
Actions #5

Updated by Ilya Dryomov almost 2 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF